name:           uni-uDrawGraph
version:        2.0
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uDrawGraph@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uDrawGraph/
category:       GUI
synopsis:       Graphs binding
description:    Binding to uDrawGraph (formerly daVinci)
exposed-modules: UDrawGraph.Types, UDrawGraph.Basic, UDrawGraph.Graph
build-depends: base >=3 && < 4, haskell98, uni-util, uni-events, uni-posixutil,
  uni-reactor, uni-graphs
ghc-options: -fglasgow-exts
extensions: CPP, OverlappingInstances
