name:           uni-emacs
version:        1.1
build-type:     Simple
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       emacs
exposed-modules: Emacs.Basic, Emacs.Commands, Emacs.SExp, Emacs.Content,
  Emacs.Extents, Emacs.Edit

build-depends: base >=3 && < 4, haskell98, parsec, uni-util, uni-events,
  uni-reactor, uni-posixutil, uni-htk, uni-server
data-files: sendmess.el mmisstex.el extents.el allmmiss.el
ghc-options: -fglasgow-exts
extensions: OverlappingInstances, UndecidableInstances
