name:           uni-events
version:        1.1
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Event handling for the uniform workbench
description:    uni events
exposed-modules: Events.Toggle,
             Events.Events,
             Events.After,
             Events.Cells,
             Events.GuardedEvents,
             Events.GuardedChannels,
             Events.DeleteQueue,
             Events.NullGuard,
             Events.FMQueue,
             Events.EqGuard,
             Events.Spawn,
             Events.WrapIO,
             Events.Destructible,
             Events.Channels,
             Events.Examples,
             Events.RefQueue,
             Events.MatchChannel,
             Events.RegexChannel,
             Events.Synchronized
build-depends: base, haskell98, uni-util
ghc-options: -O -fglasgow-exts -fallow-undecidable-instances

