name:           uni-events
version:        2.2.0.0
build-type:     Simple
license:        LGPL
author:         uniform@informatik.uni-bremen.de
maintainer:     Christian.Maeder@dfki.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Event handling for the uniform workbench
cabal-version:  >= 1.4
description:    uni events

library
 exposed-modules: Events.Toggle,
             Events.Events,
             Events.After,
             Events.Cells,
             Events.GuardedEvents,
             Events.GuardedChannels,
             Events.DeleteQueue,
             Events.NullGuard,
             Events.FMQueue,
             Events.EqGuard,
             Events.Spawn,
             Events.WrapIO,
             Events.Destructible,
             Events.Channels,
             Events.Examples,
             Events.RefQueue,
             Events.Synchronized
 build-depends: base >=3 && < 4, uni-util

 if impl(ghc < 6.10)
   extensions: PatternSignatures
 else
   ghc-options: -fwarn-unused-imports -fno-warn-warnings-deprecations
